<resources>
    <string name="app_name">MyAssignmentProject</string>
    <string name="boarding_txt">The best simple place where you discover most wonderful furnitures and make your home beautiful</string>
    <string name="logo">Logo</string>
    <string name="splash_art">Splash art</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get started</string>
    <string name="welcome">Welcome Back!</string>
    <string name="phone">Phone number</string>
    <string name="pass">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="categories">Categories</string>
    <string name="see_all">See all</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>