<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_2_100"
    tools:context=".Onboarding">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="104dp"
        android:layout_height="48dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/primary_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="49dp"
        android:text="@string/boarding_txt"
        android:textColor="@color/primary_1_100"
        style="@style/TextAppearance.Lexend.Body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/splash_art"
        app:layout_constraintBottom_toTopOf="@+id/txtSkip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/deco" />

    <TextView
        android:id="@+id/txtSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="137dp"
        android:fontFamily="@font/lexend_regular"
        android:text="@string/skip"
        android:textAlignment="textEnd"
        android:textColor="@color/primary_1_100"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="33dp"
        android:backgroundTint="@color/primary_1_100"
        android:text="@string/get_started"
        android:textColor="@color/white"
        style="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSkip" />

</androidx.constraintlayout.widget.ConstraintLayout>